<resources>
    <!--Titles-->
    <string name="app_name">Les loups-garous de Thiercelieux</string>
    <string name="app_name_second_part">de Thiercelieux</string>
    <string name="app_name_first_part">Les loups-garous</string>

    <string name="players_selection_title">Sélection des joueurs</string>
    <string name="cards_selection_title">Cartes en jeu</string>
    <string name="contacts_import_title">Importer des contacts</string>
    <string name="new_player_title">Nouveau joueur</string>

    <!--Buttons-->
    <string name="bt_cards">Cartes</string>
    <string name="bt_players">Joueurs</string>
    <string name="bt_play">Partie</string>
    <string name="bt_next_turn">Tour suivant</string>
    <string name="bt_done">Valider</string>
    <string name="bt_plus">+</string>
    <string name="bt_minus">-</string>
    <string name="bt_import">Importer</string>
    <string name="bt_create">Créer</string>

    <!--Images descriptions-->
    <string name="werewolf_logo">Logo du loup-garou</string>
    <string name="clairvoyant_logo">Logo de la voyante</string>
    <string name="little_girl_logo">Logo de la petite fille</string>
    <string name="edit_icon">Bouton édition</string>
    <string name="remove_icon">Bouton retrait</string>

    <!--Game turns descriptions-->
    <string name="werewolves_turn_description">Le village s\'endort.
        \nLes loups-garous se réveillent.
        \n(Ils désignent leur victime).
        \nLes loups-garoux se rendorment.</string>
    <string name="clairvoyant_turn_description">La voyante se réveille.
        \nLa voyante se rendort.</string>
    <string name="villagers_turn_description">Le village se réveille.
        \n(Nommer la victime s\'il y en a une).
        \nLes villageois choisissent une victime.
        \nLes villageois se rendorment.</string>
    <string name="werewolf_win">Les loups-garous ont gagné.</string>
    <string name="villagers_win">Les villageois ont gagné.</string>

    <!--Roles descriptions-->
    <string name="role_villager">Villageois</string>
    <string name="role_werewolf">Loup-garou</string>
    <string name="role_clairvoyant">Voyante</string>
    <string name="role_little_girl">Petite fille</string>
²
    <!--Text examples in layout files-->
    <string name="example_number">2</string>
    <string name="example_name">Nom</string>
    <string name="example_status">Status</string>
    <string name="example_role">Rôle</string>
    <string name="end_game">Fin du jeu</string>
    <string name="home">Accueil</string>
    <string name="select_role">Choisis un rôle</string>
    <string name="not_enough_werewolves">Vous n\'avez pas sélectionné tous les loups-garous.</string>
    <string name="too_many_werewolves">Vous avez sélectionné plus de loups-garous que prévu.</string>
    <string name="no_clairvoyant_selected">Vous n\'avez sélectionné aucune voyante.</string>
    <string name="continue_question">Êtes-vous sûr de vouloir continuer ?</string>
    <string name="ongoing_game">Vous avez déjà une partie en cours.</string>
    <string name="keep_going_question">Voulez-vous la reprendre ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>


</resources>
