<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_werewolf"
    android:padding="10dp">

    <TextView
        android:id="@+id/title"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cards_selection_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Werewolves -->

    <TextView
        android:id="@+id/werewolves"
        style="@style/Title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role_werewolf"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageView
        android:id="@+id/werewolves_picture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/werewolf_logo"
        android:src="@drawable/role_werewolf"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/werewolves" />

    <TextView
        android:id="@+id/werewolves_nb"
        style="@style/BigNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_number"
        app:layout_constraintBottom_toBottomOf="@+id/werewolves_picture"
        app:layout_constraintEnd_toStartOf="@+id/werewolves_minus"
        app:layout_constraintStart_toEndOf="@+id/werewolves_picture"
        app:layout_constraintTop_toTopOf="@+id/werewolves_picture" />


    <Button
        android:id="@+id/werewolves_minus"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/button"
        android:text="@string/bt_minus"
        app:layout_constraintBottom_toBottomOf="@+id/werewolves_picture"
        app:layout_constraintEnd_toStartOf="@+id/werewolves_plus"
        app:layout_constraintTop_toTopOf="@+id/werewolves_picture" />

    <Button
        android:id="@+id/werewolves_plus"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/button"
        android:src="@mipmap/wh_launcher"
        android:text="@string/bt_plus"
        app:layout_constraintBottom_toBottomOf="@id/werewolves_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/werewolves_picture" />

    <!-- Clairvoyant -->

    <TextView
        android:id="@+id/clairvoyant"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/role_clairvoyant"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/werewolves_picture" />

    <ImageView
        android:id="@+id/clairvoyant_picture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/clairvoyant_logo"
        android:src="@drawable/role_clairvoyant"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clairvoyant" />

    <CheckBox
        android:id="@+id/clairvoyant_enabled"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/checkbox"
        android:button="@null"
        app:layout_constraintBottom_toBottomOf="@id/clairvoyant_picture"
        app:layout_constraintLeft_toRightOf="@id/clairvoyant_picture"
        app:layout_constraintTop_toTopOf="@+id/clairvoyant_picture" />

    <!-- Little girl -->

    <TextView
        android:id="@+id/little_girl"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/role_little_girl"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clairvoyant_picture" />

    <ImageView
        android:id="@+id/little_girl_picture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/little_girl_logo"
        android:src="@drawable/role_little_girl"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/little_girl" />

    <CheckBox
        android:id="@+id/little_girl_enabled"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/checkbox"
        android:button="@null"
        app:layout_constraintBottom_toBottomOf="@id/little_girl_picture"
        app:layout_constraintLeft_toRightOf="@id/little_girl_picture"
        app:layout_constraintTop_toTopOf="@+id/little_girl_picture" />

    <Button
        android:id="@+id/bt_submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/button"
        android:text="@string/bt_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>